--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@firebase/app": "^0.3.8",
+    "@firebase/auth": "^0.9.2",
     "firebase": "^5.8.2",
     "react": "16.6.3",
     "react-native": "0.58.4"
